pages/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import 'swiper/css';
@import 'swiper/css/navigation';
@import 'swiper/css/pagination';

body {
  @apply bg-background text-foreground;
}

html {
  @apply scroll-smooth scrollbar-none;
}

/* Projects carousel */
.swiper {
  width: 45rem;
  padding: 4.7rem 0;
  height: 28rem;
}

.swiper-slide {
  opacity: 0;
  transition: all .4s ease-in-out;
  bottom: 0;
}

.swiper-slide-prev,
.swiper-slide-next,
.swiper-slide-active {
  background-color: rgb(68 71 90 / 1);
  border-radius: 0.5rem;
  filter: blur(0.25rem) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
  display: flex;
  justify-content: center !important;
  align-items: center !important;
  opacity: 0.3;
  width: 16rem !important;
  height: 12.82rem !important;
}

.swiper-slide img {
  width: 60% !important;
  position: relative;
  left: 20% !important;
  margin: 0
}

.swiper-slide-active {
  opacity: 1;
  z-index: 10;
  bottom: 20%;
  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
}

.swiper-pagination-bullet-active {
  background-color: #6272A4;
}

.swiper-button-prev,
.swiper-button-next {
  color: #6272A4;
}

.swiper-button-prev::after,
.swiper-button-next::after {
  font-size: 3.5rem;
}

.title {
  display: none;
  position: absolute;
  top: 13.5rem;
}

.subtitle {
  display: none;
  position: absolute;
  top: 17rem;
  width: 21.75rem;
  text-align: center;
  justify-content: center;
}

.swiper-slide-active .title,
.swiper-slide-active .subtitle {
  display: flex;
}

@media (max-width: 640px) {
  .swiper {
    width: 24rem;
  }

  .swiper-wrapper {
    left: 1rem;
  }

  .swiper-slide-prev,
  .swiper-slide-next,
  .swiper-slide-active {
    width: 8rem !important;
    height: 7.82rem !important;
  }

}

/* Header */
.main-header {
  position: relative;
  width: 100%;
  margin: 0px auto;
  height: 3rem;
  padding: 0.25rem 0px;
}

.fixed-header {
  position: fixed;
  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
  top: 0;
  left: 0;
  padding: 0 2rem;
}

/* Contact form */
.form-group {
  display: flex;
  position: relative;
  height: 50%;
  flex-direction: column;
  justify-content: space-between;
}

.label-float {
  position: relative;
}

.label-float textarea {
  resize: none;
  height: 4.6875rem;
}

.label-float input,
.label-float textarea {
  border: 0;
  border-bottom: .125rem solid #6272A4;
  background-color: transparent;
  margin-bottom: 1.0625rem;
  outline: none;
  min-width: 26.125rem;
  font-size: 1rem;
  transition: all .3s ease-out;
  -webkit-transition: all .3s ease-out;
  -moz-transition: all .3s ease-out;
  -webkit-appearance: none;
  border-radius: 0;
}

.label-float input:focus,
.label-float textarea:focus {
  border-bottom: .125rem solid #BD93F9;
}

.label-float input::placeholder,
.label-float textarea::placeholder {
  color: transparent;
}

.label-float label {
  pointer-events: none;
  position: absolute;
  color: #F8F8F2;
  font-size: 1.5rem;
  top: 0;
  left: 0;
  margin-top: -.5rem;
  transition: all .3s ease-out;
  -webkit-transition: all .3s ease-out;
  -moz-transition: all .3s ease-out;
}

@media (max-width: 640px) {

  .label-float input,
  .label-float textarea {
    min-width: 16.125rem;
    margin-bottom: 2.4rem;
  }

  .form-group {
    height: 65%;
  }
}

.label-float textarea+label {
  pointer-events: none;
  position: absolute;
  color: #F8F8F2;
  font-size: 1.5rem;
  top: 0;
  left: 0;
  margin-top: 2.5rem;
  transition: all .3s ease-out;
  -webkit-transition: all .3s ease-out;
  -moz-transition: all .3s ease-out;
}

.label-float input:required:invalid+label,
.label-float textarea:required:invalid+label {
  color: red;
}

.label-float input:focus:required:invalid,
.label-float textarea:focus:required:invalid {
  border-bottom: .125rem solid red;
}

.label-float input:required:invalid+label::before,
.label-float textarea:required:invalid+label::before {
  content: '*';
}

.label-float input:focus+label,
.label-float textarea:focus+label,
.label-float input:not(:placeholder-shown)+label,
.label-float textarea:not(:placeholder-shown)+label {
  color: #BD93F9;
  font-size: 1.1rem;
  margin-top: -1.5rem;
}

input:-webkit-autofill,
input:-webkit-autofill:focus {
  transition: background-color 600000s 0s, color 600000s 0s;
}

/* Loader */

.loader {
  color: #F8F8F2;
  animation: rotate 2s linear infinite;
}

@keyframes rotate {
  100% {
    transform: rotate(360deg);
  }
}

.loader circle {
  animation: dash 1.5s ease-in-out infinite;
}

@keyframes dash {
  0% {
    stroke-dasharray: 1, 150;
    stroke-dashoffset: 0;
  }

  50% {
    stroke-dasharray: 90, 150;
    stroke-dashoffset: -35;
  }

  100% {
    stroke-dasharray: 90, 150;
    stroke-dashoffset: -124;
  }
}

